--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -96,6 +96,7 @@ excruciating ,/adj./@難以忍受的;,/adj./@極痛苦的;
 experimental ,/adj./@实验性的;
 exploitation ,/n./@開發;,/n./@利用;
 extravagance ,/n./@奢侈;,/n./@浪費;
+geometrician ,/n./@幾何學家;
 gerontocracy ,/n./@老人政治;,/n./@老人政府;
 hallucinogen ,/n./@迷幻劑;,/n./@致幻剂;
 heterosexual ,/adj./@異性的;,/adj./@異性戀的;
@@ -219,6 +220,7 @@ unacceptable ,/adj./@不能接受的;
 unauthorized ,/adj./@非法的;,/adj./@未被授权的;
 unbelievable ,/adj./@难以置信的;
 unemployment ,/n./@失业;
+unidentified ,/adj./@未識別的;,/adj./@不明的;,/adj./@未知的;
 unquenchable ,/adj./@无法熄灭的;
 unscrupulous ,/adj./@肆無忌憚的;
 urbanization ,/n./@城市化;,/n./@城鎮化;
