--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1253,6 +1253,7 @@ trick ,/n./@詭計;,/n./@竅門;,/v./@欺詐;,/v./@哄騙;
 trite ,/adj./@平庸的;,/adj./@陳腐的;,/adj./@老生常谈的;
 troll ,/v./@輪唱;,/v./@拖餌釣魚;,/n./@輪唱;,/n./@拖餌釣魚;
 troop ,/n./@軍隊;
+trope ,/n./@轉義;,/n./@比喻;
 trout ,/n./@鱒魚;,/n./@鮭魚;,/n./@鱒魚肉;,/n./@鮭魚肉;,/n./@老傢伙;
 truck ,/n./@卡車;
 trump ,/n./@王牌;
