--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -221,7 +221,7 @@ campus ,/n./@校園;
 Canada ,/n./@加拿大;
 cancel ,/v./@取消;
 cancer ,/n./@癌症;
-Cancer ,/n./@巨蟹座;
+Cancer ,/n./@巨蟹座;,/n./@巨蟹宫;,/n./@北回歸線;
 candid ,/adj./@坦白的;,/adj./@直率的;
 cannon ,/n./@大炮;,/n./@加農炮;
 cannot ,/v./@不能;
@@ -674,6 +674,7 @@ homely ,/adj./@家常的;,/adj./@简朴的;
 honest ,/adj./@誠實的;
 honour ,/n./@榮幸;
 hopper ,/n./@漏斗;,/n./@跳蟲;
+hornet ,/n./@大黃蜂;
 horror ,/n./@驚駭;,/n./@恐怖;
 hostel ,/n./@招待所;
 hotdog ,/n./@熱狗;
@@ -1448,6 +1449,7 @@ triple ,/adj.//pref./@三的;
 trivet ,/n./@三脚铁架;,/n./@三脚台架;
 trivia ,/n./@瑣事;
 trophy ,/n./@戰利品;,/n./@獎品;,/n./@勝利紀念品;
+tropic ,/n./@回歸線;
 trough ,/n./@水槽;,/n./@槽;,/n./@波谷;,/n./@低谷;
 tumble ,/v./@跌倒;,/v./@摔跤;,/v./@打滾;
 tumult ,/n./@混乱;,/n./@骚乱;,/n./@喧闹;,/n./@喧哗;,/#syn/@turmoil;
