--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1301,6 +1301,7 @@ triumph ,/n./@勝利;,/n./@凱旋;
 trivial ,/adj./@瑣碎的;
 trolley ,/n./@手推車;,/n./@臺車;,/n./@電車;,/n./@觸輪;
 trooper ,/n./@騎兵;,/n./@騎警;,/n./@傘兵;
+tropics ,/n./@熱帶;,/n./@熱帶地區;
 trouble ,/n./@麻煩;
 trumpet ,/n./@喇叭;
 Tuesday ,/n./@星期二;
