--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -498,6 +498,7 @@ gauntlet ,/n./@长手套;,/n./@金属护手;
 generate ,/v./@产生;,/v./@發生;,/v./@生成;,/v./@生殖;
 generous ,/adj./@慷慨的;
 genocide ,/n./@種族滅絕;,/n./@種族屠殺;
+geometry ,/n./@幾何學;
 glorious ,/adj./@壮丽的;,/adj./@光荣的;
 glossary ,/n./@詞匯表;,/n./@術語表;
 gluttony ,/n./@暴食;,/n./@貪食;
@@ -1120,6 +1121,7 @@ trespass ,/v./@擅闖;,/v./@侵入;,/v./@冒犯;,/v./@打擾;,/vi./@犯罪;,/n./
 triangle ,/n./@三角形;,/n./@三角;
 tribunal ,/n./@法庭;,/n./@仲裁机构;,/n./@公斷;,/n./@法官席;
 trillion ,/n./@万亿;
+tropical ,/adj./@熱帶的;,/adj./@炎熱潮濕的;,/adj./@轉義的;,/adj./@回歸線的;
 truncate ,/v./@截斷;,/v./@縮短;,/adj./@截斷的;
 turbojet ,/n./@渦輪噴氣發動機;,/n./@渦輪噴氣飛機;,/n./@渦輪噴射引擎;,/n./@渦輪噴射飛機;
 tutorial ,/adj./@輔導的;,/adj./@指導的;
