--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -58,7 +58,7 @@ anarchist ,/n./@反抗權威的人;
 ancillary ,/adj./@次要的;
 animation ,/n./@动画;,/n./@活力;,/n./@生機;
 annotated ,/adj./@有註釋的;
-anomalous ,/adj./@不普通的;
+anomalous ,/adj./@異常的;,/adj./@反常的;,/adj./@不正常的;,/adj./@不規則的;,/adj./@不普通的;
 anonymous ,/adj./@匿名的;
 anthology ,/n./@選集;,/n./@集粹;,/n./@精選集;
 antiquate ,/adj./@废弃;,/adj./@过时;
@@ -132,6 +132,7 @@ brillancy ,/n./@明亮;,/n./@亮度;
 brilliant ,/adj./@聪明的;
 broadband ,/n./@宽带;
 broadcast ,/n./@广播;
+bumblebee ,/n./@熊蜂;,/n./@大黃蜂;
 butterfly ,/n./@蝴蝶;
 cafeteria ,/n./@自助餐廳;
 calculate ,/v./@计算;
@@ -140,6 +141,7 @@ caliphate ,/n./@伊斯蘭王權;,/n./@阿拉伯帝國;
 candidacy ,/n./@候選資格;,/n./@候選狀態;,/n./@候補資格;
 canonical ,/adj./@權威的;,/adj./@規範的;,/adj./@標準的;,/adj./@典型的;
 capillary ,/n./@毛细管;
+Capricorn ,/n./@摩羯座;,/n./@摩羯宮;,/n./@南回歸線;
 captivate ,/v./@迷住;
 careerist ,/n./@野心家;,/n./@事业狂;
 carefully ,/adv./@小心地;
@@ -442,6 +444,7 @@ garrulous ,/adj./@嘮叨的;,/adj./@喋喋不休的;
 generally ,/adj./@通常的;,/adj./@一般的;
 gentleman ,/n./@绅士;
 geography ,/n./@地理學;,/n./@地形;
+geometric ,/adj./@幾何的;,/adj./@幾何學的;,/adj./@幾何圖案的;,/adj./@幾何級數的;,/adj./@幾何級的;
 gibberish ,/n./@胡言亂語;
 gladiator ,/n./@格鬥者;,/n./@角斗士;
 gratitude ,/n./@感激;,/n./@感谢;
