--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -96,6 +96,7 @@ excruciating
 experimental
 exploitation
 extravagance
+geometrician
 gerontocracy
 hallucinogen
 heterosexual
@@ -219,6 +220,7 @@ unacceptable
 unauthorized
 unbelievable
 unemployment
+unidentified
 unquenchable
 unscrupulous
 urbanization
