--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -674,6 +674,7 @@ homely
 honest
 honour
 hopper
+hornet
 horror
 hostel
 hotdog
@@ -1448,6 +1449,7 @@ triple
 trivet
 trivia
 trophy
+tropic
 trough
 tumble
 tumult
