--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -498,6 +498,7 @@ gauntlet
 generate
 generous
 genocide
+geometry
 glorious
 glossary
 gluttony
@@ -1120,6 +1121,7 @@ trespass
 triangle
 tribunal
 trillion
+tropical
 truncate
 turbojet
 tutorial
