--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -132,6 +132,7 @@ brillancy
 brilliant
 broadband
 broadcast
+bumblebee
 butterfly
 cafeteria
 calculate
@@ -140,6 +141,7 @@ caliphate
 candidacy
 canonical
 capillary
+Capricorn
 captivate
 careerist
 carefully
@@ -442,6 +444,7 @@ garrulous
 generally
 gentleman
 geography
+geometric
 gibberish
 gladiator
 gratitude
