--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -54,11 +54,12 @@ Apocalypse ,/n./@天启;
 apocryphal ,/adj./@假的;
 apoplectic ,/adj./@極度憤怒的;
 apparently ,/adv./@明显地;
-apparition ,/n./@鬼魂;,/n./@幽靈;,/n./@幻影;
+apparition ,/n./@鬼魂;,/n./@幽靈;,/n./@幻影;,/n./@幻象;,/n./@異象;
 appearance ,/n./@出现;,/n./@容貌;
 applicable ,/adj./@適用的;
 appreciate ,/v./@感激;,/v./@感谢;
 apprentice ,/n./@学徒;
+aquamarine ,/n./@海藍寶石;
 archbishop ,/n./@大主教;
 aristocrat ,/n./@贵族;
 arithmetic ,/n./@算術;
@@ -114,6 +115,7 @@ cephalopod ,/n./@头足类动物;
 ceremonial ,/adj./@庆典的;,/adj./@仪式的;
 chalkboard ,/n./@黑板;
 charioteer ,/n./@双轮战车驾驭者;
+chimpanzee ,/n./@黑猩猩;
 chivalrous ,/adj./@俠義的;
 chromosome ,/n./@染色体;
 chronology ,/n./@年表;,/n./@年代顺序;,/n./@年代學;
@@ -218,6 +220,7 @@ deliberate ,/adj./@故意的;,/adj./@慎重的;
 delinquent ,/n./@罪犯;,/adj./@有违法倾向的;,/adj./@有犯罪傾向的;
 delusional ,/adj./@妄想的;
 democratic ,/adj./@民主的;
+demolition ,/n./@毀壞;,/n./@破壞;,/n./@拆除;
 denominate ,/v./@命名;
 denotation ,/n./@符号;,/n./@表示;,/n./@意义;
 department ,/n./@部@门;,/n./@系;
@@ -337,6 +340,7 @@ hesitation ,/n./@犹豫;
 highlander ,/n./@高地人;
 historical ,/adj./历史的;,/adj./@历史学的;
 hodgepodge ,/n./@大雜燴;
+holography ,/n./@全息技術;,/n./@全息攝影;
 homologous ,/adj./@相應的;,/adj./@同源的;,/adj./@類似的;
 horizontal ,/adj./@水平的;,/adj./@横的;
 horrendous ,/adj./@骇人的;,/adj./@可怕的;,/adj./@令人震惊的;,/adj./@極糟的;,/adj./@糟透了的;
@@ -344,7 +348,7 @@ hysterical ,/adj./@異常興奮的;,/adj./@歇斯底裏的;
 illuminate ,/v./@照明;
 illuminati ,/n./@光照派;
 illustrate ,/v./@阐明;,/v./@图解;
-immaculate ,/adj./@完美的;
+immaculate ,/adj./@完美的;,/adj./@無瑕的;
 immaterial ,/adj./@无关紧要的;,/adj./@无所谓的;,/adj./@不重要的;,/adj./@无形的;
 impassable ,/adj./@不能通行的;,/adj./@無法通行的;,/adj./@無法通過的;,/adj./@不可通過的;
 impeccable ,/adj./@無瑕疵的;
@@ -404,6 +408,7 @@ journalism ,/n./@新聞業;
 journalist ,/n./@记者;
 kidnapping ,/n./@绑架;,/n./@拐骗;
 kinematics ,/n./@运动学;
+knighthood ,/n./@騎士身分;,/n./@爵士身分;,/n./@爵士頭銜;,/n./@爵位;,/n./@騎士;
 Kyrgyzstan ,/n./@吉尔吉斯斯坦;
 laboratory ,/n./@實驗室;
 leadership ,/n./@領導;
@@ -425,6 +430,7 @@ masturbate ,/vi./@手淫;
 meaningful ,/adj./@有意义的;
 mechanical ,/adj./@机械的;
 meditation ,/n./@冥想;
+megalithic ,/adj./@巨石建造的;
 melancholy ,/n./@忧郁;,/n./@悲哀;,/n./@愁思;,/adj./@忧郁的;,/adj./@悲伤的;
 membership ,/n./@會員資格;,/n./@全體成員;
 mercantile ,/adj./@商業的;,/adj./@貿易的;,/adj./@商人的;
@@ -436,6 +442,7 @@ millilitre ,/n./@毫升;
 millimetre ,/n./@毫米;
 missionary ,/n./@传教士;
 moderation ,/n./@适度;,/n./@节制;,/n./@温和;
+molybdenum ,/n./@鉬;
 monochroic ,/adj./@單色的;
 monochrome ,/n./@單色;,/adj./@單色的;,/adj./@黑白的;
 monogamous ,/adj./@單一配偶的;
@@ -464,6 +471,7 @@ occasional ,/adj./@偶尔的;
 occidental ,/adj./@西方的;,/adj./@西洋的;
 occupation ,/n./@職業;,/n./@佔有;
 occurrence ,/n./@发生;,/n./@出現;
+octahedron ,/n./@八面體;
 opposition ,/n./@反对;
 optimistic ,/adj./@乐观的;
 ornamental ,/adj./@裝飾的;
@@ -521,9 +529,10 @@ proficient ,/adj./@熟练的;,/adj./@精通的;
 profitable ,/adj./@有利可图的;,/adj./@有益的;
 profitably ,/adv./@有利地;
 programmer ,/n./@程序员;
+projectile ,/n./@發射體;,/n./@拋射體;,/n./@射彈;
 projection ,/n./@投射;,/n./@投影;
 propaganda ,/n./@宣传;
-proportion ,/n./@部分;,/n./@比例;
+proportion ,/n./@部分;,/n./@比例;,/n./@规模;,/n./@均衡;
 proprietor ,/n./@所有者;,/n./@所有人;,/n./@業主;,/n./@老闆;
 propulsion ,/n./@推進;
 prosecutor ,/n./@檢察官;
@@ -578,6 +587,8 @@ revelation ,/n./@揭示;
 revolution ,/n./@革命;,/n./@变革;,/n./@循環;,/n./@旋轉;
 rhetorical ,/adj./@修辭的;,/adj./@修辭學的;,/adj./@誇張的;
 ridiculous ,/adj./@荒谬的;
+ringleader ,/n./@元兇;,/n./@首惡;,/n./@頭目;
+roundabout ,/adj./@迂回的;,/adj./@繞道的;,/adj./@繞圈子的;
 rumination ,/n./@沉思;,/n./@反芻;
 sabbatical ,/adj./@休假的;
 sacrosanct ,/adj./@神聖不可侵犯的;
@@ -633,8 +644,10 @@ supplement ,/v./@增補;,/v./@補充;,/n./@補充;
 supplicate ,/vt./@懇求;,/vt./@哀求;
 surrealism ,/n./@超現實主義;
 suspicious ,/adj./@怀疑的;
+synergetic ,/adj./@協同的;
 synonymous ,/adj./@同義的;,/adj./@同義詞的;
 systematic ,/adj./@系統的;,/adj./@有組織的;
+technetium ,/n./@鎝;
 technology ,/n./@技术;
 telepathic ,/adj./@心靈感應的;,/adj./@傳心術的;
 television ,/n./@电视;
