--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -96,13 +96,13 @@ controversy ,/n./@争论;,/n./@辩论;
 convergence ,/n./@集合;
 convocation ,/n./@召集;,/n./@集會;,/n./@評議會;
 corporation ,/n./@公司;,/n./@法人;
-correlation ,/n./@关联;
+correlation ,/n./@关联;,/n./@相互關係;,/n./@相關性;,/n./@相關;
 corroborate ,/v./@证实;
 countenance ,/n./@面容;,/n./@表情;,/n./@支持;
 counterfeit ,/v./@伪造;
 countermand ,/v./@取消;
 counterpart ,/n./@相当的物;
-credibility ,/n./@可信性;,/n./@真实性;
+credibility ,/n./@可信性;,/n./@真实性;,/n./@可靠性;
 cultivation ,/n./@培养;,/n./@耕作;
 cylindrical ,/adj./@圓柱形的;
 dangerously ,/adv./@危险地;
@@ -120,6 +120,7 @@ deteriorate ,/v./@惡化;,/v./@變壞;
 detrimental ,/adj./@有害的;
 Deutschland ,/n./@德国;
 development ,/n./@发展;,/n./@开发;
+diffraction ,/n./@衍射;
 dilapidated ,/adj./@荒废的;,/adj./@破败的;
 disapproval ,/n./@不批准;,/n./@不同意;
 discernible ,/adj./@可識別的;,/adj./@可辨別的;,/adj./@可分辨的;,/adj./@可察覺的;,/adj./@可認識的;
@@ -163,6 +164,7 @@ fingerprint ,/n./@指纹;
 flabbergast ,/v./@啞然失色;,/v./@大吃一驚;
 flexibility ,/n./@灵活性;
 fluctuation ,/n./@波動;,/n./@變動;,/n./@動搖;
+fluorescent ,/adj./@螢光的;,/adj./@發亮的;
 foolishness ,/n./@愚蠢;
 forethought ,/n./@先見;,/n./@預謀;
 fortunately ,/adv./@幸運地;,/adv./@幸而;
@@ -183,8 +185,10 @@ holographic ,/adj./@全息攝影的;,/adj./@全息技術的;
 hospitality ,/n./@好客;,/n./@款待;,/n./@殷勤;
 humiliation ,/n./@羞辱;,/n./@蒙羞;
 humiliatory ,/adj./@出丑的;,/adj./@蒙羞的;
+hydrologist ,/n./@水文學家;
 hypothermic ,/adj./@体温过低的;
 hypothesize ,/v./@假设;
+icosahedron ,/n./@二十面體;
 illuminatus ,/n./@光照派教徒;
 imagination ,/n./@想象;,/n./@想象力;
 immediately ,/adv./@立即地;
@@ -214,7 +218,7 @@ inferiority ,/n./@劣勢;
 information ,/n./@信息;
 innumerable ,/adj./@无数的;
 inquisitive ,/adj./@好奇的;,/adj./@好問的;,/adj./@愛打聽的;
-inscription ,/n./@題詞;
+inscription ,/n./@題詞;,/n./@銘文;,/n./@銘刻;
 inscrutable ,/adj./@神秘的;,/adj./@不可理解的;
 insecticide ,/n./@杀虫剂;
 inspiration ,/n./@灵感;,/n./@鼓舞;,/n./@吸气;,/n./@妙计;
@@ -237,6 +241,7 @@ interrogate ,/v./@审问;
 intoxicated ,/adj./@喝醉的;,/adj./@興奮的;,/adj./@陶醉的;
 intractable ,/adj./@棘手的;,/adj./@难治的;,/adj./@倔强的;,/adj./@不听话的;
 investigate ,/v./@调查;
+Kabbalistic ,/adj./@卡巴拉學的;,/adj./@卡巴拉的;
 lacquerware ,/n./@漆器;
 linguistics ,/n./@語言學;
 luminescent ,/adj./@發冷光的;,/adj./@冷光的;
@@ -254,6 +259,7 @@ memorabilia ,/n./@值得紀念的事物;,/n./@紀念品;
 merchandise ,/n./@商品;,/n./@貨物;,/vt./@買賣;,/vt./@經銷;
 metaphysics ,/n./@形而上学;
 methodology ,/n./@方法論;
+microscopic ,/adj./@精微的;,/adj./@微小的;,/adj./@顯微鏡的;,/adj./@只能從顯微鏡裡看到的;
 mindfulness ,/n./@留心;,/n./@察覺;
 misconstrue ,/vt./@誤會;,/vt./@误解;
 multinomial ,/n./@多項式;,/adj./@多項的;
@@ -295,6 +301,7 @@ planetarium ,/n./@天文館;,/n./@天文臺;
 poltergeist ,/n./@搗蛋鬼;
 pomegranate ,/n./@石榴;,/n./@石榴树;
 possibility ,/n./@可能性;
+postulation ,/n./@假定;,/n./@假設;
 precipitate ,/v./@促成;
 predictable ,/adj./@可预测的;
 predominant ,/adj./@主要的;,/adj./@卓越的;,/adj./@支配的;,/adj./@有影響的;,/adj./@有力的;
@@ -304,6 +311,7 @@ premonition ,/n./@预感;
 preparation ,/n./@准备;
 preposition ,/n./@介词;
 prerogative ,/adj./@有特權的;
+prestigious ,/adj./@有名望的;,/adj./@有声望的;
 presumption ,/n./@假定;,/n./@推定;,/n./@冒昧;
 pretentious ,/adj./@虛偽的;,/adj./@做作的;,/adj./@自以為是的;,/adj./@自命不凡的;,/adj./@炫耀的;,/adj./@矯飾的;
 procurement ,/n./@取得;
@@ -346,6 +354,7 @@ retribution ,/n./@报应;
 retroactive ,/adj./@追溯性的;
 rudimentary ,/adj./@基本的;,/adj./@初步的;
 salvolatile ,/n./@嗅鹽;,/n./@揮發鹽;
+sarcophagus ,/n./@石棺;
 scholarship ,/n./@奖学金;
 sedimentary ,/adj./@沉淀的;
 selectively ,/adv./@有選擇地;,/adv./@選擇性地;
@@ -355,7 +364,7 @@ sensitivity ,/n./@敏感性;,/n./@靈敏度;
 sentimental ,/adj./@感傷的;
 sightseeing ,/n./@观光;
 significant ,/adj./@重要的;
-spectacular ,/adj./@壯觀的;
+spectacular ,/adj./@壯觀的;,/adj./@引人注目的;,/adj./@驚人的;
 speculation ,/n./@推测;,/n./@投機;
 speculative ,/adj./@推测出的;
 spermatozoa ,/n./@精子;
@@ -385,6 +394,7 @@ temperament ,/n./@气质;,/n./@性情;
 temperature ,/n./@气温;
 termination ,/n./@终止;
 terminology ,/n./@术语;,/n./@术语学;
+tetrahedron ,/n./@四面體;
 theoretical ,/adj./@理論的;
 thermometer ,/n./@溫度計;
 thunderbolt ,/n./@霹靂;,/n./@雷電;
