--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -57,7 +57,7 @@ conservative ,/adj./@保守的;
 conservatory ,/n./@溫室;,/adj./@有保存力的;,/n./@音樂學校;
 considerable ,/adj./@相當大的;,/adj./@可觀的;
 consolidated ,/adj./@加固的;,/adj./@统一的;
-constipation ,/n./@便秘;
+constipation ,/n./@便秘;,/n./@限制;
 constitution ,/n./@憲法;,/n./@體制;
 construction ,/n./@建造;,/n./@建筑;
 contemporary ,/adj./@现代的;
@@ -183,6 +183,7 @@ psychotropic ,/adj./@治療精神異常的;
 purification ,/n./@净化;,/n./@提純;
 putrefaction ,/n./@化膿;,/n./@腐烂;,/n./@腐敗;
 quadriplegic ,/adj./@四肢瘫痪的;,/n./@四肢瘫痪者;
+quasicrystal ,/n./@準晶體;
 questionable ,/adj./@可疑的;
 reassignment ,/n./@再分配;,/n./@再指派;,/n./@再指定;,/n./@重新分配;
 recognizable ,/adj./@可辨認的;,/adj./@可認出的;,/adj./@可承認的;
