--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -80,6 +80,7 @@ meteorologist ,/n./@氣象學家;,/n./@氣象學者;
 miscellaneous ,/adj./@混雜的;,/adj./@各種各樣的;
 misunderstood ,/v./@误解;,/v./@误会;
 monochromatic ,/adj./@單色的;
+morphogenetic ,/adj./@形態生成的;
 multicultural ,/adj./@多元文化的;
 neighbourhood ,/n./@街坊;,/n./@邻近地区;
 ornamentation ,/n./@裝飾;
