--- a/Files/lang/ch/chinese3.csv
+++ b/Files/lang/ch/chinese3.csv
@@ -215,14 +215,16 @@ oak ,/n./@橡木;
 oar ,/n./@槳;,/n./@櫓;
 oat ,/n./@燕麥;
 odd ,/adj./@奇怪的;,/n./@奇數;
+ode ,/n./@頌歌;,/n./@颂诗;,/n./@賦;
 off ,/prep./@離開;,/adv./@掉;,/adv./@关;
 oft ,/adv./@常常;,/adv./@時常;,/adv./@經常;
 oil ,/n./@油;
 old ,/adj./@老的;,/adj./@舊的;
+ole ,/adj./@老的;
 one ,/n./@一個;,/adj./@一個;
 opt ,/vi./@選擇;
 orb ,/n./@球;,/n./@球狀物;,/n./@寶球;
-ore ,/n./@礦石;
+ore ,/n./@礦石;,/n./@礦;
 our ,/adj.//pron./@我們的;
 out ,/adv./@外;,/adv./@向外;,/adj./在@外;
 owe ,/vt./@欠;
