--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -884,6 +884,7 @@ sigh ,/v./@嘆息;
 sign ,/n./@信號;,/n./@預兆;,/v./@簽署;
 silk ,/n./@絲綢;,/adj./@絲的;
 sill ,/n./@窗臺;
+silo ,/n./@筒倉;,/n./@發射井;,/n./@青貯窖;
 silt ,/n./@淤泥;,/n./@泥沙;,/n./@煤粉;,/v./@淤塞;
 sing ,/v./@歌唱;
 sink ,/v./@沉沒;,/v./@淹沒;
