--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -124,6 +124,7 @@ berth ,/v./@停泊;,/n./@泊位;
 bible ,/n./@聖經;
 binge ,/n./@狂歡;,/v./@狂歡;
 biome ,/n./@生物羣係;,/n./@羣落;
+biped ,/n./@兩足動物;
 bitch ,/n./@婊子;
 black ,/adj./@黑色的;
 blade ,/n./@刃;
@@ -325,7 +326,7 @@ debug ,/v./@調試;
 debut ,/n./@初次登臺;,/n./@首次亮相;
 decay ,/v./@腐敗;
 decor ,/n./@裝飾;,/n./@佈置;
-decoy ,/v./@誘騙;
+decoy ,/v./@誘騙;,/n./@誘餌;
 defer ,/v./@拖延;
 deign ,/vi./@屈尊;,/vi./@賜予;
 delay ,/v./@拖延;,/v./@推遲;
@@ -420,7 +421,7 @@ evoke ,/v./@喚起;
 exact ,/adj./@精確的;
 exalt ,/v./@提升;,/v./@贊揚;
 excel ,/v./@超過;,/v./@擅長;
-exert ,/v./@发揮;,/vt./@竭盡;
+exert ,/v./@发揮;,/vt./@竭盡;,/vt./@施加;,/vt./@運用;,/vt./@行使;
 exile ,/v./@流放;,/v./@放逐;
 exist ,/v./@存在;
 expel ,/v./@驅逐;
@@ -506,6 +507,7 @@ gauge ,/v./@測量;
 gaunt ,/adj./@憔悴的;,/adj./@荒凉的;,/adj./@枯瘦的;
 geese ,/n.//pl./@鵝;
 genre ,/n./@類型;,/n./@流派;
+genus ,/n./@屬;,/n./@種類;
 ghost ,/n./@鬼;,/n./@幽靈;
 giant ,/adj./@巨大的;,/n./@巨人;
 glare ,/v./@瞪;
@@ -711,6 +713,7 @@ melon ,/n./@瓜;,/n./@甜瓜;
 mercy ,/n./@仁慈;
 merge ,/v./@結合;
 merit ,/n./@優點;,/n./@功績;
+meson ,/n./@介子;
 metal ,/n./@金屬;,/adj./@金屬制的;
 meter ,/n./@量器;,/n./@儀表;
 metre ,/n./@米;
@@ -851,6 +854,7 @@ pluck ,/v./@拉;,/v./@拽;,/v./@扯;,/n./@勇氣;,/n./@内臟;
 plumb ,/n./@鉛錘;,/n./@垂直;,/v./@探測;,/v./@垂直;
 plume ,/n./@羽毛;,/n./@羽飾;,/n./@羽狀物;,/n./@縷;
 plush ,/n./@長毛絨;,/n./@厚絨布;,/adj./@长毛绒的;,/adj./@豪華的;,/adj./@奢侈的;
+Pluto ,/n./@冥王星;,/n./@冥王;
 point ,/v./@指出;
 poise ,/v./@平衡;,/n./@平衡;
 poker ,/n./@撲克;
@@ -883,6 +887,7 @@ purge ,/v./@凈化;
 purse ,/n./@手提袋;
 putty ,/n./@油灰;
 qualm ,/n./@疑虑;,/n./@不安;
+quasi ,/adj./@準的;,/adj./@類似的;
 queen ,/n./@女王;
 queer ,/adj./@奇妙的;,/adj./@古怪的;
 quell ,/v./@平息;,/v./@鎮壓;,/v./@減輕;
