--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -134,6 +134,7 @@ barley ,/n./@大麥;
 barrel ,/n./@桶;,/n./@管;,/n./@槍管;,/n./@砲筒;
 barren ,/adj./@不育的;,/adj./@貧瘠的;
 barter ,/n./@易貨貿易;
+baryon ,/n./@重子;
 basalt ,/n./@玄武岩;
 basket ,/n./@籃;
 batter ,/vt./@重击;,/vt./@殴打;,/vi./@猛击;
@@ -608,8 +609,10 @@ gentle ,/adj./@輕柔的;
 gently ,/adj./@輕柔的;
 gerund ,/n./@動名詞;
 ghetto ,/n./@贫民区;,/n./@貧民窟;,/n./@少数族裔聚居区;,/n./@犹太人居住区;
+gibbon ,/n./@長臂猿;
 giggle ,/v./@咯咯笑;,/n./@咯咯笑;
 ginger ,/n./@薑;
+girdle ,/n./@腰帶;,/n./@環形物;,/n./@緊身褡;,/vt./@環繞;,/vt./@捆紮;
 glance ,/v./@掃視;,/v./@瞥;
 glider ,/n./@滑翔機;
 glitch ,/n./@故障;,/n./@失靈;
@@ -637,6 +640,7 @@ guffaw ,/v./@哄笑;
 guilty ,/adj./@有罪的;,/adj./@內疚的;
 guitar ,/n./@吉他;
 gurgle ,/n./@咯咯聲;
+hadron ,/n./@强子;
 haggle ,/n./@爭論;,/n./@討價還價;,/vi./@爭論;,/vi./@討價還價;
 hallow ,/n./@神聖;,/v./@神化;,/n./@聖徒;,/n./@聖器;
 hamlet ,/n./@小村莊;
@@ -1040,6 +1044,7 @@ prompt ,/v./@敏捷的;,/v./@促進;,/v./@提示;,/adj./@准時的;
 pronto ,/adj./@立卽的;
 propel ,/v./@推進;,/v./@推動;,/vt./@驱使;
 proper ,/adj./@適合的;
+proton ,/n./@質子;
 pseudo ,/adj./@假的;,/adj./@冒充的;,/n./@偽君子;
 psyche ,/n./@靈魂;,/n./@心智;
 public ,/adj./@公開的;
@@ -1054,6 +1059,7 @@ puzzle ,/v./@使困惑;,/n./@謎;
 pyrite ,/n./@硫化礦物;
 quadra ,/adj.//pref./@四的;
 quaint ,/adj./@古色古香的;,/adj./@老式的;,/adj./@老派的;
+quarry ,/n./@採石場;,/vt./@採得;,/vi./@採石;
 quartz ,/n./@石英;
 quaver ,/v./@顫抖;
 quench ,/v./@熄滅;
@@ -1221,6 +1227,7 @@ senate ,/n./@參議院;
 senior ,/adj./@髙級的;
 sentry ,/n./@哨兵;,/n./@崗哨;
 sequel ,/n./@結局;,/n./@續篇;
+seraph ,/n./@熾天使;,/n./@六翼天使;,/n./@撒拉弗;
 serene ,/adj./@平靜的;,/adj./@安詳的;,/adj./@清澈的;,/adj./@晴朗的;
 series ,/n./@係列;
 sermon ,/n./@布道;,/n./@说教;
@@ -1248,6 +1255,7 @@ shroom ,/n./@蘑菇;
 shroud ,/v./@覆蓋;,/v./@遮蔽;,/n./@覆蓋物;,/n./@壽衣;,/n./@裹尸布;
 signal ,/n./@信號;
 signor ,/n./@先生;
+silage ,/n./@青貯飼料;
 silent ,/adj./@寂靜的;
 silver ,/n./@銀;
 simple ,/adj./@簡單的;
@@ -1367,6 +1375,7 @@ summon ,/v./@召喚;,/v./@召集;
 Sunday ,/n./@星期天;
 sunder ,/v./@切開;,/v./@切斷;,/v./@分離;
 superb ,/adj./@極好的;
+supine ,/adj./@仰臥的;,/adj./@懶散的;,/adj./@仰向的;
 supply ,/v./@供應;,/v./@供給;
 survey ,/v./@調查;
 suture ,/n./@縫合;,/n./@縫合處;
