--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -14,6 +14,7 @@ accident ,/n./@事故;
 accolade ,/v./@同意;
 accuracy ,/n./@精确;,/n./@精确性;
 accurate ,/adj./@精确的;
+acoustic ,/adj./@聽覺的;,/adj./@音響的;,/adj./@聲學的;,/adj./@原声的;
 acquaint ,/v./使@认识;,/v./使@熟悉;
 activate ,/v./@刺激;,/v./@激活;
 activity ,/n./@活动;
@@ -68,7 +69,7 @@ antidote ,/n./@解毒劑;,/n./@解藥;
 anything ,/pron./@任何事;
 aperitif ,/n./@开胃酒;
 aperture ,/n./@孔;,/n./@隙縫;,/n./@孔徑;,/n./@光圈;,/n./@孔洞;
-aphorism ,/n./@格言;
+aphorism ,/n./@格言;,/n./@箴言;
 apostasy ,/n./@變節;,/n./@背叛;
 appalled ,/adj./@惊骇的;
 apparent ,/adj./@明显的;,/adj./@表面上的;
@@ -148,6 +149,7 @@ building ,/n./@建筑;
 bulkhead ,/n./@艙壁;,/n./@隔板;,/n./@隔牆;,/n./@堤岸;
 burglary ,/n./@盗窃;
 business ,/n./@事務;,/n./@買賣;,/n./@行業;,/n./@商業;,/n./@商號;
+calabash ,/n./@葫蘆;,/n./@瓢;,/n./@加拉巴果;,/n./@加拉巴木;
 calamity ,/n./@災難;
 calculus ,/n./@微积分;
 calendar ,/n./@日历;
@@ -417,7 +419,7 @@ equation ,/n./@等式;,/n./@方程式;
 equipage ,/n./@馬車;
 erotical ,/adj./@性愛的;,/adj./@色情的;,/adj./@好色的;
 escalate ,/v./@升級;,/v./@擴大;
-esoteric ,/adj./@秘传的;,/adj./@限于圈内人的;
+esoteric ,/adj./@秘传的;,/adj./@限于圈内人的;,/adj./@深奧的;
 espresso ,/n./@濃咖啡;
 estimate ,/v./@估计;
 estrange ,/v./@疏遠;,/v./@離間;
@@ -524,6 +526,7 @@ gyration ,/n./@旋轉;,/n./@螺旋;,/n./@迴旋;
 handcuff ,/n./@手銬;
 handicap ,/v./@妨礙;,/n./@障礙;
 handsome ,/adj./@帅气的;
+haystack ,/n./@乾草堆;
 headache ,/n./@头痛;
 headline ,/n./@头条;
 hedgehog ,/n./@刺猬;
@@ -550,6 +553,7 @@ horrific ,/adj./@可怕的;
 hospital ,/n./@医院;
 humanism ,/n./@人道主義;
 humanity ,/n./@人類;,/n./@人性;
+humanoid ,/n./@類人動物;,/adj./@人形的;,/n./@類人的;
 humidity ,/n./@湿度;,/n./@潮湿;
 humility ,/n./@謙虛;
 humorous ,/adj./@幽默的;
@@ -596,6 +600,7 @@ initiate ,/v./@开始;,/v./@创始;
 innocent ,/adj./@天真的;
 innovate ,/v./@革新;
 insolent ,/adj./@無理的;,/adj./@傲慢的;
+insomnia ,/n./@不眠症;,/n./@失眠症;
 instance ,/n./@例子;,/n./@實例;,/n./@情況;,/n./@場合;,/vt./@舉例;,/vt./@引證;
 instinct ,/n./@本能;
 instruct ,/v./@指导;,/v./@指示;
@@ -626,6 +631,8 @@ junction ,/n./@会合处;,/n./@交叉路口;
 juvenile ,/adj./@青少年的;,/n./@少年;,/n./@幼兽;,/n./@雏鸟;
 kangaroo ,/n./@袋鼠;
 keyboard ,/n./@键盘;
+kinghood ,/n./@國王身分;,/n./@王道;
+kingship ,/n./@國王身分;,/n./@王權;,/n./@王位;
 lameness ,/n./@瘸腿;,/n./@跛足;,/n./@蹩腳;
 laminate ,/v./@鍛壓;,/v./@層壓;,/v./@分成薄片;
 landfill ,/n./@垃圾填埋;,/n./@垃圾填埋地;
@@ -678,13 +685,16 @@ mechanic ,/n./@机修工;
 mediator ,/n./@调解人;
 mediocre ,/adj./@普通的;,/adj./@平凡的;,/adj./@中等的;,/adj./@平庸的;
 meditate ,/v./@考慮;,/v./@冥想;
+megalith ,/n./@巨石;
 meltdown ,/n./@熔毀;,/n./@崩潰;,/n./@潰敗;
 membrane ,/n./@膜;,/n./@薄膜;,/n./@膜狀物;
 memorize ,/v./@记住;
 meninges ,/n.//pl./@腦膜;
 merchant ,/n./@商人;
 merciful ,/adj./@仁慈的;
+merkabah ,/n./@梅爾卡巴;
 metaphor ,/n./@暗喻;,/n./@隱喻;
+metatron ,/n./@梅塔特隆;
 midnight ,/n./@午夜;
 migraine ,/n./@偏頭痛;
 military ,/adj./@军事的;
@@ -737,6 +747,7 @@ newlywed ,/n./@新婚夫妇;
 nickname ,/n./@绰号;
 nineteen ,/adj./@十九;
 nominate ,/v./@提名;,/v./@推薦;,/v./@任命;,/v./@指定;
+nomogram ,/n./@列線圖;,/n./@諾謨圖;
 nonsense ,/n./@废话;,/n./@无稽之谈;
 normalcy ,/n./@正常状态;,/n./@常态;
 notation ,/n./@符号;,/n./@记号法;,/n./@注释;,/n./@乐谱;
@@ -846,7 +857,8 @@ polymath ,/adj./@博學的;,/n./@博學家;
 populace ,/n./@民众;,/n./@大众;
 portable ,/adj./@可携带的;
 position ,/n./@位置;,/n./@姿态;
-positive ,/adj./@明確的;,/adj./@肯定的;,/adj./@絕對的;
+positive ,/adj./@明確的;,/adj./@肯定的;,/adj./@絕對的;,/adj./@陽性的;,/adj./@正的;
+positron ,/n./@正電子;,/n./@陽電子;
 possible ,/adj./@可能的;
 possibly ,/adv./@可能地;
 postpone ,/v./@拖延;,/v./@推迟;
@@ -1023,6 +1035,7 @@ spiteful ,/adj./@懷恨的;,/adj./@惡意的;
 splatter ,/vt./@泼溅;,/vi./@啪嗒作响;,/n./@啪嗒声;
 splendid ,/adj./@壮丽的;
 splendor ,/n./@光彩;,/n./@壯麗;,/n./@壯觀;,/n./@光輝;,/n./@輝煌;
+spoonful ,/n./@一匙的量;
 sporadic ,/adj./@零星的;,/adj./@分散的;,/adj./@偶發的;,/adj./@散發的;
 sprinkle ,/vt./@洒;,/vt./@撒;,/n./@少量;
 spurious ,/adj./@假的;
@@ -1081,6 +1094,7 @@ tactical ,/adj./@战术上的;,/adj./@战术的;,/adj./@有谋略的;,/adj./@短
 talisman ,/n./@護身符;
 tangible ,/adj./@有形的;,/adj./@切实的;
 taxation ,/n./@税务;,/n./@税;
+taxonomy ,/n./@分類法;,/n./@分類學;
 tectonic ,/adj./@构造的;,/adj./@建筑的;,/adj./@地壳构造的;
 teenager ,/n./@青少年;
 teleport ,/v./@瞬間移動;,/v./@心靈傳輸;
@@ -1092,6 +1106,7 @@ terrible ,/adj./@可怕的;
 terrific ,/adj./@极大的;
 tertiary ,/adj./@第三的;,/adj./@第三纪的;,/adj./@第三系的;,/adj./@第三产业的;,/adj./@高等教育的;
 testator ,/n./@立遺囑者;
+theorize ,/vt./@理論化;,/vt./@學說化;
 thesauri ,/n./@主題詞表;,/n./@同義詞詞典;,/n./@同反義詞詞典;
 thinking ,/v./@想;,/n./@思想;
 thirteen ,/n./@十三;
@@ -1123,6 +1138,7 @@ tribunal ,/n./@法庭;,/n./@仲裁机构;,/n./@公斷;,/n./@法官席;
 trillion ,/n./@万亿;
 tropical ,/adj./@熱帶的;,/adj./@炎熱潮濕的;,/adj./@轉義的;,/adj./@回歸線的;
 truncate ,/v./@截斷;,/v./@縮短;,/adj./@截斷的;
+tungsten ,/n./@鎢;
 turbojet ,/n./@渦輪噴氣發動機;,/n./@渦輪噴氣飛機;,/n./@渦輪噴射引擎;,/n./@渦輪噴射飛機;
 tutorial ,/adj./@輔導的;,/adj./@指導的;
 twilight ,/n./@黎明;,/n./@黃昏;,/n./@微亮;
@@ -1147,7 +1163,7 @@ variable ,/n./@變量;,/adj./@可變的;
 variadic ,/adj./@可變參數的;
 variance ,/n./@分歧;,/n./@不和;,/n./@不一致;,/n./@衝突;
 vehement ,/adj./@激烈的;
-velocity ,/n./@速度;
+velocity ,/n./@速度;,/n./@速率;
 venerate ,/vt./@崇敬;,/vt./@敬重;
 veracity ,/n./@真實;,/n./@誠實;,/n./@真實性;
 verbatim ,/adj./@逐字的;,/adv./@逐字地;
