--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -69,7 +69,7 @@ apologize ,/v./@道歉;
 appalling ,/adj./@骇人的;
 apparatus ,/n./@装置;,/n./@设备;
 appealing ,/adj./@有吸引力的;
-appendage ,/n./@附加物;
+appendage ,/n./@附加物;,/n./@附屬物;,/n./@附屬器官;,/n./@附屬肢體;
 appliance ,/n./@装置;,/n./@应用;
 appraisal ,/v./@评价;
 apprehend ,/v./@逮捕;
@@ -104,6 +104,7 @@ available ,/adj./@可用的;
 avalanche ,/n./@雪崩;,/n./@山崩;,/n./@大批;
 awestruck ,/adj./@充滿敬畏的;
 backslash ,/n./@反斜杠;
+bacterium ,/n./@細菌;
 balaclava ,/n./@巴拉克拉瓦盔式帽;
 ballistic ,/adj./@彈道的;
 barometer ,/n./@气压计;
@@ -114,6 +115,7 @@ beginning ,/n./@開始;,/n./@開端;,/n./@起點;
 behaviour ,/n./@行为;,/n./@举止;
 benchmark ,/n./@基准;,/n./@标准检查程序;
 betrothal ,/n./@訂婚;,/n./@婚約;
+bilateral ,/adj./@兩邊的;,/adj./@雙邊的;,/adj./@左右對稱的;,/adj./@雙方的;
 billboard ,/n./@广告牌;
 bimonthly ,/n./@双月刊;
 biography ,/n./@传记;
@@ -205,6 +207,7 @@ condition ,/n./@条件;,/n./@情况;
 conductor ,/n./@导体;,/n./@指挥;,/n./@售票员;,/n./@列车长;,/n./@向导;
 confident ,/adj./@自信的;
 congenial ,/adj./@意氣相投的;,/adj./@一致的;,/adj./@性格相似的;
+congruent ,/adj./@一致的;,/adj./@全等的;
 congruous ,/adj./@一致的;,/adj./@協調的;,/adj./@適合的;
 connotate ,/v./@暗示;
 conscious ,/adj./@清醒的;
@@ -236,6 +239,7 @@ crossword ,/n./@纵横字谜;
 cruciform ,/adj./@十字形的;
 culminate ,/vi./@告终;,/vi./@達到高潮;,/vi./@達到頂點;
 cultivate ,/v./@培养;
+cuneiform ,/n./@楔形文字;,/adj./@楔形文字的;
 curiosity ,/n./@好奇心;,/n./@好奇;
 currently ,/adv./@目前;
 curricula ,/n./@課程;
@@ -243,6 +247,7 @@ curvature ,/n./@彎曲;,/n./@曲率;,/n./@弯曲度;
 customary ,/adj./@習慣的;,/adj./@通常的;,/adj./@慣常的;,/adj./@合乎習俗的;
 customise ,/v./@定制;,/v./@个性化;
 customize ,/v./@定制;
+cyclotron ,/n./@迴旋加速器;
 dangerous ,/adj./@危险的;
 dashboard ,/n./@儀錶盤;
 decadence ,/n./@堕落;
@@ -523,6 +528,7 @@ ingenious ,/adj./@巧妙的;,/adj./@灵巧的;
 ingenuity ,/n./@精巧;,/n./@獨創性;,/n./@心靈手巧;
 ingrained ,/adj./@根深蒂固的;,/adj./@深入人心的;
 insertion ,/n./@插入;
+insomniac ,/n./@不眠症患者;,/adj./@失眠的;,/n./@失眠患者;
 instigate ,/v./@唆使;,/v./@煽动;,/v./@怂恿;,/vt./@提起;,/vt./@发起;
 institute ,/n./@学会;,/n./@协会;,/v./@制定;,/v./@創立;
 insurance ,/n./@保险;
@@ -544,7 +550,7 @@ intervene ,/v./@介入;,/v./@干涉;,/v./@調停;
 interview ,/v./@面试;,/v./@采访;
 intestine ,/n./@肠;
 intricate ,/adj./@复杂的;
-intrinsic ,/adj./@本质的;,/adj./@固有的;
+intrinsic ,/adj./@本质的;,/adj./@固有的;,/adj./@本身的;
 introduce ,/v./@介紹;,/v./@引進;,/v./@采用;
 intuition ,/n./@直觉;
 intuitive ,/adj./@直觉的;
@@ -620,8 +626,9 @@ momentous ,/adj./@重要的;
 monologue ,/n./@獨白;
 monstrous ,/adj./@可怕的;,/adj./@極惡的;
 moustache ,/n./@胡子;,/n./@胡须;
+mysticism ,/n./@神祕主義;,/n./@玄想;,/n./@通靈;
 necessary ,/adj./@必要的;
-nefarious ,/adj./@邪惡的;
+nefarious ,/adj./@邪惡的;,/adj./@惡毒的;
 negotiate ,/v./@协商;
 newsstand ,/n./@報攤;,/n./@雜誌攤;
 nightmare ,/n./@梦魇;
@@ -647,7 +654,7 @@ onslaught ,/n./@攻擊;,/n./@襲擊;
 operation ,/n./@操作;,/n./@手术;,/n./@经营;
 opportune ,/adj./@及時的;,/adj./@湊巧的;
 orchestra ,/n./@管弦樂隊;,/n./@交響樂;
-originate ,/v./@创始;
+originate ,/v./@创始;,/vt./@發明;,/vt./@引發;,/vt./@創作;
 orphanage ,/n./@孤兒院;
 oscillate ,/v./@震盪;,/v./@擺動;
 ostracize ,/v./@排斥;,/v./@排擠;,/v./@孤立;
@@ -706,6 +713,7 @@ pilferage ,/n./@偷竊;
 pineapple ,/n./@菠萝;
 plainsman ,/n./@平原居民;
 plaintiff ,/n./@原告;
+planetary ,/adj./@行星的;
 platitude ,/n./@单调;
 plausible ,/adj./@似有道理的;
 plentiful ,/adj./@丰富的;,/adj./@充足的;
@@ -734,6 +742,7 @@ predicate ,/v./@断言;,/v./@断定;,/n./@谓语;,/n./@述语;,/adj./@谓语的;
 preferred ,/adj./@优先的;
 pregnancy ,/n./@懷孕;
 prejudice ,/n./@偏见;
+premature ,/adj./@過早的;,/adj./@倉促的;,/adj./@不成熟的;,/adj./@早產的;
 prescribe ,/v./@指定;,/v./@开@药;,/v./@采用;
 president ,/n./@总统;
 prevalent ,/adj./@流行的;,/adj./@盛行的;,/adj./@普遍的;
@@ -752,6 +761,7 @@ promising ,/adj./@有希望的;
 promotion ,/n./@促进;,/n./@提拔;,/n./@晋升;
 pronounce ,/v./@發音;,/v./@宣布;
 propagate ,/vt./@传播;,/vi./@繁殖;
+proponent ,/n./@倡导者;,/n./@提議人;,/n./@擁護者;
 prosecute ,/v./@迫害;
 protester ,/n./@抗议者;
 prototype ,/n./@原型;,/n./@样本;,/n./@标准;
@@ -890,6 +900,7 @@ sterilize ,/v./@消毒;,/v./@滅菌;
 stimulate ,/v./@刺激;,/v./@鼓舞;
 stressful ,/adj./@紧张的;
 structure ,/n./@结构;,/n./@组织;
+subatomic ,/adj./@亚原子的;
 subdivide ,/v./@再分;
 subjugate ,/vt./@征服;,/v./@剋制;
 submarine ,/n./@潜艇;
@@ -899,6 +910,7 @@ subsidize ,/vt./@补贴;,/vt./@资助;
 substance ,/n./@物质;
 succulent ,/adj./@多汁的;
 suffocate ,/v./@窒息;,/v./@受阻;,/vt./@悶死;,/vt./@扼制;
+suffoquer ,/vt./@窒息;
 sumptuous ,/adj./@奢侈的;,/adj./@豪華的;,/adj./@奢華的;
 sunflower ,/n./@向日葵;
 supersede ,/v./@取代;,/v./@推遲;,/v./@代替;
@@ -912,9 +924,11 @@ synthesis ,/n./@綜合;,/n./@合成;
 synthetic ,/adj./@合成的;,/adj./@人造的;,/adj./@綜合的;
 tangerine ,/n./@橘子;
 tantalize ,/vt./@逗惹;,/vt./@折磨;,/vt./@撩撥;
+taxonomic ,/n./@分類法;,/n./@分類學;,/adj./@分類的;
 technique ,/n./@技术;
 telepathy ,/n./@心靈感應;,/n./@傳心術;
 telephone ,/n./@电话;
+telephony ,/n./@電話通訊;,/n./@電話學;,/n./@電話製造法;
 telescope ,/n./@望远镜;
 temporary ,/adj./@临时的;
 tentative ,/adj./@試探性的;,/adj./@試驗性的;,/adj./@暫時性的;,/adj./@嘗試性的;
