--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -59,6 +59,7 @@ appearance
 applicable
 appreciate
 apprentice
+aquamarine
 archbishop
 aristocrat
 arithmetic
@@ -114,6 +115,7 @@ cephalopod
 ceremonial
 chalkboard
 charioteer
+chimpanzee
 chivalrous
 chromosome
 chronology
@@ -218,6 +220,7 @@ deliberate
 delinquent
 delusional
 democratic
+demolition
 denominate
 denotation
 department
@@ -337,6 +340,7 @@ hesitation
 highlander
 historical
 hodgepodge
+holography
 homologous
 horizontal
 horrendous
@@ -404,6 +408,7 @@ journalism
 journalist
 kidnapping
 kinematics
+knighthood
 Kyrgyzstan
 laboratory
 leadership
@@ -425,6 +430,7 @@ masturbate
 meaningful
 mechanical
 meditation
+megalithic
 melancholy
 membership
 mercantile
@@ -436,6 +442,7 @@ millilitre
 millimetre
 missionary
 moderation
+molybdenum
 monochroic
 monochrome
 monogamous
@@ -464,6 +471,7 @@ occasional
 occidental
 occupation
 occurrence
+octahedron
 opposition
 optimistic
 ornamental
@@ -521,6 +529,7 @@ proficient
 profitable
 profitably
 programmer
+projectile
 projection
 propaganda
 proportion
@@ -578,6 +587,8 @@ revelation
 revolution
 rhetorical
 ridiculous
+ringleader
+roundabout
 rumination
 sabbatical
 sacrosanct
@@ -633,8 +644,10 @@ supplement
 supplicate
 surrealism
 suspicious
+synergetic
 synonymous
 systematic
+technetium
 technology
 telepathic
 television
