--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -120,6 +120,7 @@ deteriorate
 detrimental
 Deutschland
 development
+diffraction
 dilapidated
 disapproval
 discernible
@@ -163,6 +164,7 @@ fingerprint
 flabbergast
 flexibility
 fluctuation
+fluorescent
 foolishness
 forethought
 fortunately
@@ -183,8 +185,10 @@ holographic
 hospitality
 humiliation
 humiliatory
+hydrologist
 hypothermic
 hypothesize
+icosahedron
 illuminatus
 imagination
 immediately
@@ -237,6 +241,7 @@ interrogate
 intoxicated
 intractable
 investigate
+Kabbalistic
 lacquerware
 linguistics
 luminescent
@@ -254,6 +259,7 @@ memorabilia
 merchandise
 metaphysics
 methodology
+microscopic
 mindfulness
 misconstrue
 multinomial
@@ -295,6 +301,7 @@ planetarium
 poltergeist
 pomegranate
 possibility
+postulation
 precipitate
 predictable
 predominant
@@ -304,6 +311,7 @@ premonition
 preparation
 preposition
 prerogative
+prestigious
 presumption
 pretentious
 procurement
@@ -346,6 +354,7 @@ retribution
 retroactive
 rudimentary
 salvolatile
+sarcophagus
 scholarship
 sedimentary
 selectively
@@ -385,6 +394,7 @@ temperament
 temperature
 termination
 terminology
+tetrahedron
 theoretical
 thermometer
 thunderbolt
