--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -124,6 +124,7 @@ berth
 bible
 binge
 biome
+biped
 bitch
 black
 blade
@@ -506,6 +507,7 @@ gauge
 gaunt
 geese
 genre
+genus
 ghost
 giant
 glare
@@ -711,6 +713,7 @@ melon
 mercy
 merge
 merit
+meson
 metal
 meter
 metre
@@ -851,6 +854,7 @@ pluck
 plumb
 plume
 plush
+Pluto
 point
 poise
 poker
@@ -883,6 +887,7 @@ purge
 purse
 putty
 qualm
+quasi
 queen
 queer
 quell
