--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -134,6 +134,7 @@ barley
 barrel
 barren
 barter
+baryon
 basalt
 basket
 batter
@@ -608,8 +609,10 @@ gentle
 gently
 gerund
 ghetto
+gibbon
 giggle
 ginger
+girdle
 glance
 glider
 glitch
@@ -637,6 +640,7 @@ guffaw
 guilty
 guitar
 gurgle
+hadron
 haggle
 hallow
 hamlet
@@ -1040,6 +1044,7 @@ prompt
 pronto
 propel
 proper
+proton
 pseudo
 psyche
 public
@@ -1054,6 +1059,7 @@ puzzle
 pyrite
 quadra
 quaint
+quarry
 quartz
 quaver
 quench
@@ -1221,6 +1227,7 @@ senate
 senior
 sentry
 sequel
+seraph
 serene
 series
 sermon
@@ -1248,6 +1255,7 @@ shroom
 shroud
 signal
 signor
+silage
 silent
 silver
 simple
@@ -1367,6 +1375,7 @@ summon
 Sunday
 sunder
 superb
+supine
 supply
 survey
 suture
