--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -74,6 +74,7 @@ apprise
 approve
 apricot
 apropos
+aquifer
 archaic
 archive
 arduous
@@ -425,6 +426,7 @@ disturb
 diverge
 diverse
 divisor
+divulge
 dolphin
 doormat
 dormant
@@ -456,6 +458,7 @@ elusive
 emanate
 embassy
 embrace
+emerald
 eminent
 emotion
 emperor
@@ -512,6 +515,7 @@ factory
 factual
 faculty
 failure
+fanatic
 fantasy
 faraway
 fascist
@@ -602,6 +606,7 @@ godlike
 goodbye
 gracias
 grammar
+granite
 graphic
 gravity
 greater
@@ -631,6 +636,8 @@ hexagon
 hideous
 history
 holiday
+hominid
+hominin
 homonym
 honesty
 hopeful
@@ -642,6 +649,7 @@ hundred
 husband
 hyaline
 hygiene
+hyperon
 iceberg
 idyllic
 illegal
@@ -811,6 +819,7 @@ neither
 nervous
 network
 neutral
+neutron
 NewYork
 nitpick
 nominal
@@ -823,6 +832,7 @@ novella
 novelty
 noxious
 nuclear
+nucleon
 numeric
 nymphet
 obelisk
@@ -1161,6 +1171,7 @@ smatter
 smolder
 smother
 smuggle
+snippet
 snuggle
 society
 soddish
@@ -1204,6 +1215,7 @@ storage
 strange
 stretch
 striate
+strophe
 student
 stumble
 stylish
@@ -1238,6 +1250,7 @@ sustain
 swallow
 sweater
 synagog
+synergy
 synonym
 tactful
 tactile
@@ -1325,6 +1338,7 @@ upright
 uranium
 urgency
 urinate
+urology
 useless
 utensil
 utility
@@ -1393,6 +1407,7 @@ willing
 wiretap
 without
 witness
+wolfram
 woollen
 worldly
 worship
