--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -14,6 +14,7 @@ accident
 accolade
 accuracy
 accurate
+acoustic
 acquaint
 activate
 activity
@@ -148,6 +149,7 @@ building
 bulkhead
 burglary
 business
+calabash
 calamity
 calculus
 calendar
@@ -524,6 +526,7 @@ gyration
 handcuff
 handicap
 handsome
+haystack
 headache
 headline
 hedgehog
@@ -550,6 +553,7 @@ horrific
 hospital
 humanism
 humanity
+humanoid
 humidity
 humility
 humorous
@@ -596,6 +600,7 @@ initiate
 innocent
 innovate
 insolent
+insomnia
 instance
 instinct
 instruct
@@ -626,6 +631,8 @@ junction
 juvenile
 kangaroo
 keyboard
+kinghood
+kingship
 lameness
 laminate
 landfill
@@ -678,13 +685,16 @@ mechanic
 mediator
 mediocre
 meditate
+megalith
 meltdown
 membrane
 memorize
 meninges
 merchant
 merciful
+merkabah
 metaphor
+metatron
 midnight
 migraine
 military
@@ -737,6 +747,7 @@ newlywed
 nickname
 nineteen
 nominate
+nomogram
 nonsense
 normalcy
 notation
@@ -847,6 +858,7 @@ populace
 portable
 position
 positive
+positron
 possible
 possibly
 postpone
@@ -1023,6 +1035,7 @@ spiteful
 splatter
 splendid
 splendor
+spoonful
 sporadic
 sprinkle
 spurious
@@ -1081,6 +1094,7 @@ tactical
 talisman
 tangible
 taxation
+taxonomy
 tectonic
 teenager
 teleport
@@ -1092,6 +1106,7 @@ terrible
 terrific
 tertiary
 testator
+theorize
 thesauri
 thinking
 thirteen
@@ -1123,6 +1138,7 @@ tribunal
 trillion
 tropical
 truncate
+tungsten
 turbojet
 tutorial
 twilight
