--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -104,6 +104,7 @@ available
 avalanche
 awestruck
 backslash
+bacterium
 balaclava
 ballistic
 barometer
@@ -114,6 +115,7 @@ beginning
 behaviour
 benchmark
 betrothal
+bilateral
 billboard
 bimonthly
 biography
@@ -205,6 +207,7 @@ condition
 conductor
 confident
 congenial
+congruent
 congruous
 connotate
 conscious
@@ -236,6 +239,7 @@ crossword
 cruciform
 culminate
 cultivate
+cuneiform
 curiosity
 currently
 curricula
@@ -243,6 +247,7 @@ curvature
 customary
 customise
 customize
+cyclotron
 dangerous
 dashboard
 decadence
@@ -523,6 +528,7 @@ ingenious
 ingenuity
 ingrained
 insertion
+insomniac
 instigate
 institute
 insurance
@@ -620,6 +626,7 @@ momentous
 monologue
 monstrous
 moustache
+mysticism
 necessary
 nefarious
 negotiate
@@ -706,6 +713,7 @@ pilferage
 pineapple
 plainsman
 plaintiff
+planetary
 platitude
 plausible
 plentiful
@@ -734,6 +742,7 @@ predicate
 preferred
 pregnancy
 prejudice
+premature
 prescribe
 president
 prevalent
@@ -752,6 +761,7 @@ promising
 promotion
 pronounce
 propagate
+proponent
 prosecute
 protester
 prototype
@@ -890,6 +900,7 @@ sterilize
 stimulate
 stressful
 structure
+subatomic
 subdivide
 subjugate
 submarine
@@ -899,6 +910,7 @@ subsidize
 substance
 succulent
 suffocate
+suffoquer
 sumptuous
 sunflower
 supersede
@@ -912,9 +924,11 @@ synthesis
 synthetic
 tangerine
 tantalize
+taxonomic
 technique
 telepathy
 telephone
+telephony
 telescope
 temporary
 tentative
