--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -264,6 +264,7 @@ mindfulness ,/n./@留心;,/n./@察覺;
 misconstrue ,/vt./@誤會;,/vt./@误解;
 multinomial ,/n./@多項式;,/adj./@多項的;
 nationality ,/n./@国籍;
+Neanderthal ,/n./@尼安德特人;,/adj./@尼安德特人的;
 Neitherland ,/n./@荷兰;,/n./@尼德兰;
 nonchalance ,/n./@冷淡;
 nondescript ,/adj./@無以名狀的;,/adj./@難以歸類的;,/adj./@難以形容的;
