--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -884,6 +884,7 @@ package ,/n./@包裹;,/n./@包;
 paladin ,/n./@騎士;,/n./@遊俠;
 palpate ,/vt./@觸診;
 pancake ,/n./@薄烤餅;
+Pangaea ,/n./@泛大陸;,/n./@盤古大陸;,/n./@超大陸;
 panther ,/n./@豹;,/n./@美洲豹;
 papyrus ,/n./@紙莎草;,/n./@紙莎草紙;,/n./@古代文獻;
 parable ,/n./@寓言;,/n./@比喻;
