--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -504,6 +504,7 @@ geometry ,/n./@幾何學;
 glorious ,/adj./@壮丽的;,/adj./@光荣的;
 glossary ,/n./@詞匯表;,/n./@術語表;
 gluttony ,/n./@暴食;,/n./@貪食;
+Gondwana ,/n./@岡瓦納大陸;
 goodness ,/n./@善良;,/n./@优秀;
 goodwill ,/n./@友善;
 gorgeous ,/adj./@华丽的;,/adj./@灿烂的;,/adj./@漂亮的;,/adj./@令人愉快的;,/adj./@美丽的;
@@ -641,6 +642,7 @@ language ,/n./@语言;
 languish ,/vi./@憔悴;,/vi./@凋萎;,/vi./@蕭條;,/vi./@苦思;
 latitude ,/n./@纬度;
 laughter ,/n./@笑;,/n./@笑聲;
+Laurasia ,/n./@勞亞大陸;
 lavatory ,/n./@盥洗室;,/n./@廁所;
 lavender ,/n./@薰衣草;
 lengthen ,/v./@变长;
