--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -504,6 +504,7 @@ geometry
 glorious
 glossary
 gluttony
+Gondwana
 goodness
 goodwill
 gorgeous
@@ -641,6 +642,7 @@ language
 languish
 latitude
 laughter
+Laurasia
 lavatory
 lavender
 lengthen
