--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -87,7 +87,7 @@ constructor ,/n./@构造器;,/n./@建造者;
 contaminate ,/v./@污染;
 contemplate ,/v./@沉思;
 contentious ,/adj./@有争议的;
-continental ,/adj./@大陸的;
+continental ,/adj./@大陸的;,/adj./@大陸性的;,/adj./@歐洲大陸的;,/adj./@北美大陸的;
 contingency ,/n./@事故;,/n./@意外;,/n./@应急措施;
 continuance ,/n./@繼續;
 contraction ,/n./@收縮;,/n./@緊縮;
