--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -331,6 +331,7 @@ cradle ,/n./@搖籃;,/n./@发源地;,/n./@托架;,/n./@支架;
 cranky ,/adj./@暴躁的;,/adj./@古怪的;
 crappy ,/adj./@蹩脚的;,/adj./@糟糕的;
 crater ,/n./@坑;,/n./@彈坑;,/n./@火山口;,/n./@隕石坑;
+craton ,/n./@克拉通;
 cravat ,/n./@領帶;,/n./@領巾;
 create ,/v./@創造;
 credit ,/n./@信用;,/v./@歸功于;,/v./@相信;
