--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -487,6 +487,7 @@ espouse ,/v./@支持;,/v./@嫁;,/v./@娶;,/v./@贊成;,/v./@信奉;
 esquire ,/n./@君子;
 eternal ,/adj./@永恆的;
 eudemon ,/n./@守護神;,/n./@善良的精靈;
+Eurasia ,/n./@歐亞大陸;,/n./@歐羅細亞;
 evasion ,/v./@逃避;
 evasive ,/adj./@逃避的;,/adj./@推托的;
 evident ,/adj./@證據確鑿的;
@@ -1097,6 +1098,7 @@ rivalry ,/n./@競爭;,/n./@對抗;
 rivulet ,/n./@小溪;
 roaming ,/v./@漫步;
 robbery ,/n./@搶劫;
+Rodinia ,/n./@羅迪尼亞大陸;
 romance ,/n./@浪漫;
 routine ,/n./@常规;,/n./@例行程序;,/adj./@例行的;,/adj./@常规的;,/adj./@平淡的;,/adj./@乏味的;
 royalty ,/n./@王室;,/n./@版稅;,/n./@王權;,/n./@專利稅;
