--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -629,6 +629,7 @@ jeopardy ,/n./@危險;
 jetliner ,/n./@噴氣客機;
 judicial ,/adj./@司法的;
 junction ,/n./@会合处;,/n./@交叉路口;
+Jurassic ,/n./@侏羅紀;,/adj./@侏羅紀的;
 juvenile ,/adj./@青少年的;,/n./@少年;,/n./@幼兽;,/n./@雏鸟;
 kangaroo ,/n./@袋鼠;
 keyboard ,/n./@键盘;
