--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -571,6 +571,7 @@ knowledge ,/n./@知识;
 laborious ,/adj./@費力的;,/adj./@艰巨的;,/adj./@吃力的;
 labyrinth ,/n./@迷宫;
 landscape ,/n./@风景;,/n./@风景画;,/n./@地形;
+Laurentia ,/n./@勞倫大陸;
 lawnmower ,/n./@割草機;
 legendary ,/adj./@傳說的;,/adj./@傳奇的;
 liability ,/n./@責任;
