--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -487,6 +487,7 @@ espouse
 esquire
 eternal
 eudemon
+Eurasia
 evasion
 evasive
 evident
@@ -1097,6 +1098,7 @@ rivalry
 rivulet
 roaming
 robbery
+Rodinia
 romance
 routine
 royalty
